force-app/main/default/objects/Case_CRDR__c/Case_CRDR__c.object-meta.xml
<CustomObject>
    <description>Container for external object (Forrester CASE_CRDR)</description>
    <label>CRDR</label>
    <nameField>
        <label>Case CRDR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRDRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>