force-app/main/default/objects/Case_CRDR__c/fields/Case_Recid__c.field-meta.xml
<CustomField>
    <fullName>Case_Recid__c</fullName>
    <label>Case Recid</label>
    <length>24</length>
    <type>Text</type>
</CustomField>