force-app/main/default/objects/Case_CRDR__c/fields/ExternalCaseCRDRId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCaseCRDRId__c</fullName>
    <description>RecId from external object</description>
    <externalId>true</externalId>
    <label>ExternalCaseCRDRId</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>