force-app/main/default/objects/Case_CRDR__c/fields/ModDate__c.field-meta.xml
<CustomField>
    <fullName>ModDate__c</fullName>
    <label>ModDate</label>
    <length>60</length>
    <type>Text</type>
</CustomField>