force-app/main/default/objects/Case_CRDR__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AWAITING_DRAFT</fullName>
                <label>Awaiting Draft</label>
            </value>
            <value>
                <fullName>DRAFT</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>IN_REVIEW</fullName>
                <label>In Review</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>FINALIZED</fullName>
                <label>Finalized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>